Update README.md to include screenshot